schema/testdata/validation_relationships_create_nested_recognizes_non_create/schema.keel
model House {
    fields {
        houseName Text
        houseNumber Number
        rooms Room[]
        waterConnection Connection
        owner Owner
    }

    actions {
        create createHouse() with (houseName, waterConnection.id)
    }
}

model Room {
    fields {
        house House
        name Text
        colour Text
        floor Floor
    }
}

model Floor {
    fields {
        covering Text
        area Number
    }
}

model Connection {
    fields {
        supplierCo Text
        region Text
    }
}

model Owner {
    fields {
        ownerName Text
        pet Pet
    }
}

model Pet {
    fields {
        typeOfAnimal Text
        favouriteToy Toy
    }
}

model Toy {
    fields {
        whatIsIt Text
    }
}
